# ouzel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CREDITS.md  Doxyfile  LICENSE  Makefile  README.md  azure-pipelines.yml  index.html  ouzel.sln  ouzel.vcxproj  ouzel.vcxproj.filters  params.json  sonar-project.properties
.github/: FUNDING.yml
engine/: CMakeLists.txt  DefaultConfig.h  Makefile  Prefix.pch  libouzel.vcxproj  libouzel.vcxproj.filters  ouzel.hpp  stdafx.cpp  stdafx.h
engine/assets/: Asset.hpp  AssetError.hpp  BmfLoader.cpp  BmfLoader.hpp  Bundle.cpp  Bundle.hpp  Cache.cpp  Cache.hpp  ColladaLoader.cpp  ColladaLoader.hpp  CueLoader.cpp  CueLoader.hpp  GltfLoader.cpp  GltfLoader.hpp  ImageLoader.cpp  ImageLoader.hpp  Loader.hpp  MtlLoader.cpp  MtlLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  ParticleSystemLoader.cpp  ParticleSystemLoader.hpp  README.md  SpriteLoader.cpp  SpriteLoader.hpp  SpriteSheetLoader.hpp  TtfLoader.cpp  TtfLoader.hpp  VorbisLoader.cpp  VorbisLoader.hpp  WaveLoader.cpp  WaveLoader.hpp
engine/audio/: Audio.cpp  Audio.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioError.hpp  Channel.hpp  Containers.cpp  Containers.hpp  Cue.cpp  Cue.hpp  Driver.hpp  Effect.cpp  Effect.hpp  Effects.cpp  Effects.hpp  Listener.cpp  Listener.hpp  Mix.cpp  Mix.hpp  Node.cpp  Node.hpp  Oscillator.cpp  Oscillator.hpp  PcmClip.cpp  PcmClip.hpp  SampleFormat.hpp  Settings.hpp  SilenceSound.cpp  SilenceSound.hpp  Sound.cpp  Sound.hpp  Source.hpp  Submix.cpp  Submix.hpp  Voice.cpp  Voice.hpp  VorbisClip.cpp  VorbisClip.hpp  WavePlayer.hpp
engine/core/: Application.hpp  Engine.cpp  Engine.hpp  NativeWindow.cpp  NativeWindow.hpp  Platform.h  Setup.h  System.cpp  System.hpp  Timer.hpp  Window.cpp  Window.hpp  WorkerPool.hpp
engine/easing/: Easing.hpp
engine/events/: Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventHandler.hpp
engine/formats/: Ini.hpp  Json.hpp  Obf.hpp  Plist.hpp  Xml.hpp
engine/graphics/: BlendFactor.hpp  BlendOperation.hpp  BlendState.cpp  BlendState.hpp  Buffer.cpp  Buffer.hpp  BufferType.hpp  ColorMask.hpp  Commands.hpp  CompareFunction.hpp  CubeFace.hpp  DataType.hpp  DepthStencilState.cpp  DepthStencilState.hpp  DrawMode.hpp  Driver.hpp  Flags.hpp  Graphics.cpp  Graphics.hpp  GraphicsError.hpp  Image.hpp  Material.hpp  Object.hpp  PixelFormat.hpp  RasterizerState.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  SamplerAddressMode.hpp  SamplerFilter.hpp  Settings.hpp  Shader.cpp  Shader.hpp  StencilOperation.hpp  Texture.cpp  (+3 more)
engine/gui/: BMFont.cpp  BMFont.hpp  Font.hpp  README.md  TTFont.cpp  TTFont.hpp  Widget.cpp  Widget.hpp  Widgets.cpp  Widgets.hpp
engine/hash/: Fnv1.hpp
engine/input/: Controller.hpp  Cursor.cpp  Cursor.hpp  DeviceId.hpp  Gamepad.cpp  Gamepad.hpp  GamepadConfig.hpp  GamepadDevice.cpp  GamepadDevice.hpp  InputDevice.cpp  InputDevice.hpp  InputManager.cpp  InputManager.hpp  InputSystem.cpp  InputSystem.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  Mouse.cpp  Mouse.hpp  MouseDevice.cpp  MouseDevice.hpp  README.md  SystemCursor.hpp  Touchpad.cpp  Touchpad.hpp  TouchpadDevice.cpp  TouchpadDevice.hpp
engine/jni/: Android.mk  Application.mk
engine/libouzel.xcodeproj/: project.pbxproj
engine/localization/: Localization.cpp  Localization.hpp  LocalizationError.hpp
engine/math/: Box.hpp  Color.hpp  Constants.hpp  ConvexVolume.hpp  Fnv.hpp  MathUtils.cpp  MathUtils.hpp  Matrix.cpp  Matrix.hpp  MatrixNeon.hpp  MatrixSse.hpp  Plane.hpp  Quaternion.hpp  QuaternionNeon.hpp  QuaternionSse.hpp  Rect.hpp  Scalar.hpp  Simd.hpp  Size.hpp  Vector.hpp  VectorNeon.hpp  VectorSse.hpp
engine/network/: Client.cpp  Client.hpp  Network.cpp  Network.hpp  README.md  Server.cpp  Server.hpp  Socket.hpp
engine/scene/: Actor.cpp  Actor.hpp  Animator.cpp  Animator.hpp  Animators.cpp  Animators.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Layer.cpp  Layer.hpp  Light.cpp  Light.hpp  ParticleSystem.cpp  ParticleSystem.hpp  README.md  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  ShapeRenderer.cpp  ShapeRenderer.hpp  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  StaticMeshRenderer.cpp  StaticMeshRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
engine/storage/: Archive.hpp  CfPointer.hpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Path.hpp  StorageError.hpp
engine/thread/: Channel.hpp  Semaphore.hpp  Thread.hpp
engine/utils/: Bit.hpp  Ini.hpp  Json.hpp  Log.cpp  Log.hpp  Obf.hpp  Plist.hpp  README.md  Thread.hpp  Utf8.hpp  Utils.cpp  Utils.hpp  Xml.hpp
samples/: AnimationsSample.cpp  AnimationsSample.h  AnimationsSample.hpp  Application.cpp  Application.h  CMakeLists.txt  GUISample.cpp  GUISample.h  GUISample.hpp  GameSample.cpp  GameSample.h  GameSample.hpp  InputSample.cpp  InputSample.h  InputSample.hpp  MainMenu.cpp  MainMenu.h  MainMenu.hpp  Makefile  PerspectiveSample.cpp  PerspectiveSample.h  PerspectiveSample.hpp  Prefix.hpp  RTSample.cpp  RTSample.h  RTSample.hpp  Samples.cpp  Samples.h  SoundSample.cpp  SoundSample.h  SoundSample.hpp  SpritesSample.cpp  SpritesSample.h  SpritesSample.hpp  main.cpp  samples  samples.html  samples.js  samples.sln  samples.vcxproj  (+2 more)
samples/Resources/: 24-bit.json  8-bit.json  ambient.json  assets.json  font.fnt  jump.json  lv.mo  music.json  tone.json
samples/android/: AndroidManifest.xml  build.xml  custom_rules.xml
samples/app/: build.gradle  proguard-rules.pro
samples/ios/: Info.plist
samples/linux/: Prefix.h
samples/macos/: Info.plist  Prefix.pch
samples/osx/: Info.plist  Prefix.pch
samples/samples.xcodeproj/: project.pbxproj
samples/sprite/: Application.cpp  Application.h  main.cpp
samples/tvos/: Info.plist  Prefix.pch
samples/win/: resource.h  samples.sln  samples.vcxproj
samples/windows/: resource.h  samples.exe.manifest  samples.rc  stdafx.cpp  stdafx.h  stdafx.hpp
tools/: CMakeLists.txt  Makefile  ouzel.vcxproj  ouzel.vcxproj.filters
tools/ouzel.xcodeproj/: project.pbxproj
(+2663 files in other folders)
